# nodash

./: .gitignore  README.md  ROADMAP.md  SCRAPING_PLAN.md  main.py  pyproject.toml  requirements.txt
data/: neighborhood-aliases.json  restaurants.db-journal
docs/: gtm-strategy.md  launch-plan.md  manual-verification-log.md  ux-audit.md
pipeline/: build_db.py  clean_order_urls.py  extract_fees_llm.py  extract_platform_fees.py  fetch_photos.py  fix_cuisines.py  migrate_to_supabase.py  scrape_delivery_details.py  scrape_spa.py  scrape_toast_fees.py  scrape_websites.py
scripts/: export_csv.py
supabase/migrations/: 001_initial_schema.sql
web/: next.config.ts  nixpacks.toml  package-lock.json  package.json  railway.json
web/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
web/app/[borough]/: page.tsx
web/app/about/: page.tsx
web/app/admin/: page.tsx
web/app/api/leaderboard/: route.ts
web/app/api/map-pins/: route.ts
web/app/api/progress/: route.ts
web/app/api/restaurants/: route.ts
web/app/feedback/: page.tsx
web/app/leaderboard/: page.tsx
web/app/sitemap.xml/: route.ts
web/components/: BoroughTabs.tsx  CommunityProgress.tsx  CuisineFilter.tsx  DeliveryInfoForm.tsx  FreeDeliveryToggle.tsx  MapView.tsx  NearMeButton.tsx  RestaurantCard.tsx  RestaurantSection.tsx  SearchBar.tsx  ViewToggle.tsx  restaurant-card.tsx
web/lib/: cuisines.ts  db.ts  formatters.ts  mock-data.ts  neighborhoods.ts  submissions-db.ts  supabase.ts  types.ts
web/public/: manifest.json
web/scripts/: ensure-db.sh
web/types/: leaflet.markercluster.d.ts
(+5 files in other folders)
