[project]
name = "nodash"
version = "0.1.0"
description = "NYC restaurant free delivery directory pipeline"
requires-python = ">=3.11"
dependencies = [
    "trafilatura>=1.12",   # HTML → clean markdown for LLM passes
    "httpx>=0.27",         # async HTTP for website scraping
    "pdfplumber>=0.11",    # PDF text extraction for restaurant menu PDFs
    # LLM pass uses xAI Grok via httpx (already a dep) — no extra SDK needed
]

[project.optional-dependencies]
calling = [
    "elevenlabs",
    "twilio",
]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["pipeline", "scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
